Primary revisions to manuscript: copytweak-rep in section 8.5, unsup cat, contrast in thomas98, some mention of machine learning generative models. In other news, updated and more or less finalised fits with the category [0] bug fixed in Simulation.py. TODO: Update the goldstate.

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -1,3 +1,33 @@
+@article{ahn1992two,
+  title={A two-stage model of category construction},
+  author={Ahn, Woo-Kyoung and Medin, Douglas L},
+  journal={Cognitive Science},
+  volume={16},
+  number={1},
+  pages={81--121},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+@article{imai1965discriminability,
+  title={Discriminability and preference for attributes in free and constrained classification.},
+  author={Imai, Shiro and Garner, WR},
+  journal={Journal of Experimental Psychology},
+  volume={69},
+  number={6},
+  pages={596},
+  year={1965},
+  publisher={American Psychological Association}
+}
+@article{milton2004influence,
+  title={The influence of stimulus properties on category construction.},
+  author={Milton, Fraser and Wills, AJ},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={30},
+  number={2},
+  pages={407},
+  year={2004},
+  publisher={American Psychological Association}
+}
 @article{akaike1974new,
   title={A new look at the statistical model identification},
   author={Akaike, Hirotugu},
@@ -89,6 +119,18 @@
   pages       = {169--211},
 }
 
+@incollection{chen2016infogan,
+title = {InfoGAN: Interpretable Representation Learning by Information Maximizing Generative Adversarial Nets},
+author = {Chen, Xi and Duan, Yan and Houthooft, Rein and Schulman, John and Sutskever, Ilya and Abbeel, Pieter},
+booktitle = {Advances in Neural Information Processing Systems 29},
+editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
+pages = {2172--2180},
+year = 2016,
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/6399-infogan-interpretable-representation-learning-by-information-maximizing-generative-adversarial-nets.pdf}
+}
+
+
 @incollection{conaway2015dissociation,
  author = "Conaway, Nolan B. and Kurtz, K. J.",
  title = "A dissociation between categorization and similarity to exemplars",
@@ -174,6 +216,19 @@
   publisher={Elsevier}
 }
 
+@incollection{goodfellow2014gan,
+title = {Generative Adversarial Nets},
+author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+booktitle = {Advances in Neural Information Processing Systems 27},
+editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+pages = {2672--2680},
+year = {2014},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
+}
+
+				 
+
 @incollection{goodman1972seven,
  author = "Goodman, Nelson",
  title = "Seven strictures on similarity",
@@ -194,6 +249,17 @@
   pages={1--18},
   year={2011},
   publisher={Elsevier}
+}
+
+@incollection{ho2016gail,
+title = {Generative Adversarial Imitation Learning},
+author = {Ho, Jonathan and Ermon, Stefano},
+booktitle = {Advances in Neural Information Processing Systems 29},
+editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
+pages = {4565--4573},
+year = {2016},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/6391-generative-adversarial-imitation-learning.pdf}
 }
 
 @article{hurvich1989regression,
@@ -225,6 +291,18 @@
 	pages = {307--321},
 	year = {2007}
 }
+
+@incollection{kingma2016,
+title = {Improved Variational Inference with Inverse Autoregressive Flow},
+author = {Kingma, Diederik P and Salimans, Tim and Jozefowicz, Rafal and Chen, Xi and Sutskever, Ilya and Welling, Max},
+booktitle = {Advances in Neural Information Processing Systems 29},
+editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
+pages = {4743--4751},
+year = 2016,
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/6581-improved-variational-inference-with-inverse-autoregressive-flow.pdf}
+}
+
 
 @article{abbott16,
 	author = {J. T. Abbott and T. L. Griffiths and T. Reiger},
@@ -322,6 +400,14 @@
 	Title = {Categorization as nonparametric {B}ayesian density estimation},
 	Year = {2008}}
 
+@incollection{kahneman1972subjective,
+  title={Subjective probability: A judgment of representativeness},
+  author={Kahneman, Daniel and Tversky, Amos},
+  booktitle={The concept of probability in psychological experiments},
+  pages={25--48},
+  year={1972},
+  publisher={Springer}
+}
 @article{kahneman73,
 	author = {D. Kahneman and A. Tversky},
 	title = {On the psychology of prediction},
@@ -331,6 +417,7 @@
 	year = {1973},
 	pages = {237--251}
 }
+
 @article{jern2013probabilistic,
   title={A probabilistic account of exemplar and category generation},
   author={Jern, Alan and Kemp, Charles},
@@ -342,6 +429,21 @@
   publisher={Elsevier}
 }
 
+@book{berger16,
+  author = {J. Berger},
+  title = {Contagious: Why Things Catch On},
+  publisher = {Simon and Schuster},
+  address = {New York: NY},
+  year = {2016}
+}
+
+@book{rogers03,
+  author = {E. M. Rogers},
+  title = {Diffusion of Innovations},
+  publisher = {Free Press},
+  address = {New York: NY},
+  year = {2003}
+}
 
 @book{kaufman2010handbook,
   title={The Cambridge handbook of creativity},
