Final revisions by Joe. Mostly cleaned up various loose bits. Now off to Ken.

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -24,7 +24,7 @@
   journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
   volume={30},
   number={2},
-  pages={407},
+  pages={407--415},
   year={2004},
   publisher={American Psychological Association}
 }
@@ -126,8 +126,7 @@ booktitle = {Advances in Neural Information Processing Systems 29},
 editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
 pages = {2172--2180},
 year = 2016,
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/6399-infogan-interpretable-representation-learning-by-information-maximizing-generative-adversarial-nets.pdf}
+publisher = {Curran Associates, Inc.}
 }
 
 
@@ -189,7 +188,7 @@ url = {http://papers.nips.cc/paper/6399-infogan-interpretable-representation-lea
   journal={Journal of Experimental Psychology: General},
   volume={123},
   number={2},
-  pages={178},
+  pages={178--200},
   year={1994},
   publisher={American Psychological Association}
 }
@@ -223,8 +222,7 @@ booktitle = {Advances in Neural Information Processing Systems 27},
 editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
 pages = {2672--2680},
 year = {2014},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
+publisher = {Curran Associates, Inc.}
 }
 
 				 
@@ -258,8 +256,7 @@ booktitle = {Advances in Neural Information Processing Systems 29},
 editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
 pages = {4565--4573},
 year = {2016},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/6391-generative-adversarial-imitation-learning.pdf}
+publisher = {Curran Associates, Inc.}
 }
 
 @article{hurvich1989regression,
@@ -277,7 +274,7 @@ url = {http://papers.nips.cc/paper/6391-generative-adversarial-imitation-learnin
   journal={Journal of Experimental Psychology},
   volume={69},
   number={6},
-  pages={596},
+  pages={596--608},
   year={1965},
   publisher={American Psychological Association}
 }
@@ -299,8 +296,7 @@ booktitle = {Advances in Neural Information Processing Systems 29},
 editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
 pages = {4743--4751},
 year = 2016,
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/6581-improved-variational-inference-with-inverse-autoregressive-flow.pdf}
+publisher = {Curran Associates, Inc.}
 }
 
 
@@ -361,27 +357,29 @@ url = {http://papers.nips.cc/paper/6581-improved-variational-inference-with-inve
 }
 
 @article{griffiths18,
-	author = {T. L. Griffiths and D. Daniels and J. L. Austerweil and J. B. Tenenbaum},
-	title = {Subjective randomness as statistical inference},
-	journal = {Cognitive Psychology},
-	year = {in press},
-	pages = {xx-xx},
-	volume = {YY},
-	year = {2018}
+  title={Subjective randomness as statistical inference},
+  author={Griffiths, Thomas L and Daniels, Dylan and Austerweil, Joseph L and Tenenbaum, Joshua B},
+  journal={Cognitive psychology},
+  volume={103},
+  pages={85--109},
+  year={2018},
+  publisher={Elsevier}
 }
-
 @inproceedings{tenenbaum01,
-	author = {J. B. Tenenbaum and T. L. Griffiths},
-	title = {The rational basis of representativeness},
-	booktitle = {Proceedings of the 23rd Annual Conference of the Cognitive Science Society},
-	year = {2001}
+  title =		 {The Rational Basis of Representatives},
+  author =		 {Tenenbaum, Joshua B and Griffiths, Thomas},
+  booktitle =	 {Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume =		 {23},
+  number =		 {23},
+  year =		 {2001}
 }
 
 @inproceedings{abbott11,
-	author = {J. T. Abbott and K. A. Heller and Z. Ghahramani and T. L. Griffiths},
-	title = {Testing a {B}ayesian model of representativeness using a large image database},
-	booktitle = {Advances in Neural Information Processing Systems, 24},
-	year = {2011}
+  author =		 {J. T. Abbott and K. A. Heller and Z. Ghahramani and T. L. Griffiths},
+  title =		 {Testing a {B}ayesian model of representativeness using a large image database},
+  booktitle =	 {Advances in Neural Information Processing Systems},
+  pages =		 {2321--2329},
+  year =		 {2011},
 }
 
 @inproceedings{rafferty10,
@@ -453,12 +451,14 @@ url = {http://papers.nips.cc/paper/6581-improved-variational-inference-with-inve
   year={2010},
 }
 
-@article{zwaan2017,
-author = {R. A. Zwaan and A. Etz and R. E. Lucas and M. B. Donnellan},
-title = {Making replication mainstream},
-journal = {Behavioral and Brain Sciences}
-pages = {1--50},
-year = {2017}
+@article{zwaan2018making,
+  title={Making replication mainstream},
+  author={Zwaan, Rolf A and Etz, Alexander and Lucas, Richard E and Donnellan, M Brent},
+  journal={Behavioral and Brain Sciences},
+  volume={41},
+  year={2018},
+  pages={e120},
+  publisher={Cambridge University Press}
 }
 
 @article{stewart2005,
