Manuscript: fixed minor typo, cleaned a few sentences. This version sent as minor update to Ken and Nolan.

--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -1577,7 +1577,7 @@ In the PACKER and copy-and-tweak models, the attention weights, $w$, specify the
 importance of each dimension in the computation of similarity. While there exist
 methods to find the optimal attention weighting scheme given a classification
 \citep[see][]{vanpaemel2012using}, for simplicity we assume that the `Alpha' and
-`Beta' categories are distinct along dimensions that the `Beta' exemplarss do
+`Beta' categories are distinct along dimensions that the `Beta' exemplars do
 not vary on. In this case, the weighting for a given participant can be computed
 as:
 
@@ -2201,8 +2201,8 @@ categorization models
 The present work focuses on the influence of contrast on categorization,
 primarily by exploring two different conceptualizations of contrast. However,
 throughout this paper we have only explored one type of category generation
-problem, that is the generation of new categories of squares that vary only in
-size and shade. It is possible that the strength of the influence of contrast on
+problem, that is the generation of new categories of new categories in an
+artificial domain. It is possible that the strength of the influence of contrast on
 category generation decisions varies depending on the nature of the category
 generation problem, for instance, in situations where the boundaries of the
 domain are not clearly defined. To provide some intuition for this, consider the
