Models no longer match gold copy for some reason. Investigation underway.

--- a/Experiments/cogpsych-code/plot_modelmodel_ease.ipynb
+++ b/Experiments/cogpsych-code/plot_modelmodel_ease.ipynb
@@ -675,6 +675,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 26.        , 150.83587876,  10.27877133],\n",
+       "       [121.        , 151.34231714,  13.00832737],\n",
+       "       [112.        , 151.34231714,  13.00832737],\n",
+       "       [ 95.        , 155.50749638,  12.97989667],\n",
+       "       [ 32.        , 169.90850935,  13.04267786],\n",
+       "       [ 89.        , 171.0750412 ,  15.83626935],\n",
+       "       [ 85.        , 189.44772195,  13.19505467],\n",
+       "       [ 38.        , 213.68791723,  13.57413775],\n",
+       "       [  6.        , 220.01850275,  13.34284634],\n",
+       "       [114.        , 226.87330223,  13.99075241],\n",
+       "       [ 98.        , 252.26315068,  11.82857982],\n",
+       "       [  5.        , 267.39728507,  13.2284531 ],\n",
+       "       [ 72.        , 278.02340456,  15.24447012],\n",
+       "       [ 94.        , 280.53624646,  16.66442771],\n",
+       "       [ 17.        , 293.76601006,  14.34383132],\n",
+       "       [ 99.        , 321.67801652,  13.33305107],\n",
+       "       [ 54.        , 322.50806927,  12.74218454],\n",
+       "       [ 80.        , 333.8286277 ,  12.44996369],\n",
+       "       [ 51.        , 334.78574887,  12.82920604],\n",
+       "       [117.        , 386.59750614,  13.56571684],\n",
+       "       [ 18.        , 397.84704017,  17.14942768],\n",
+       "       [ 88.        , 427.03114142,  15.28599267],\n",
+       "       [ 40.        , 432.25043373,  15.55286756],\n",
+       "       [ 15.        , 436.96574254,  14.63250853],\n",
+       "       [ 25.        , 460.30521996,  16.94393115],\n",
+       "       [ 66.        , 541.99114995,  16.54018542],\n",
+       "       [ 41.        , 555.05142195,  23.91773484],\n",
+       "       [111.        , 561.57452676,  15.66853916],\n",
+       "       [115.        , 604.586461  ,  16.20656213],\n",
+       "       [ 67.        , 639.22884159,  18.82528413],\n",
+       "       [ 75.        , 721.75077455,  22.29435073],\n",
+       "       [ 53.        , 722.76886036,  18.79498615],\n",
+       "       [ 44.        , 735.45210401,  19.37140171]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Some indication of which model fits each data point better\n",
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
