Massive update with Corner condition writeup. Still rough but probably human readable.

--- a/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
+++ b/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "fitlast = False\n",
     "#Make plots?\n",
     "doplots = True\n",
-    "saveplots = False\n",
+    "saveplots = True\n",
     "if fitlast:\n",
     "    showlast = True\n",
     "else:\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +127,409 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ppt: 318\n"
+      "Ppt: 0\n",
+      "Ppt: 1\n",
+      "Ppt: 2\n",
+      "Ppt: 3\n",
+      "Ppt: 4\n",
+      "Ppt: 5\n",
+      "Ppt: 6\n",
+      "Ppt: 7\n",
+      "Ppt: 8\n",
+      "Ppt: 9\n",
+      "Ppt: 10\n",
+      "Ppt: 11\n",
+      "Ppt: 12\n",
+      "Ppt: 13\n",
+      "Ppt: 14\n",
+      "Ppt: 15\n",
+      "Ppt: 16\n",
+      "Ppt: 17\n",
+      "Ppt: 18\n",
+      "Ppt: 19\n",
+      "Ppt: 20\n",
+      "Ppt: 21\n",
+      "Ppt: 22\n",
+      "Ppt: 23\n",
+      "Ppt: 24\n",
+      "Ppt: 25\n",
+      "Ppt: 26\n",
+      "Ppt: 27\n",
+      "Ppt: 28\n",
+      "Ppt: 29\n",
+      "Ppt: 30\n",
+      "Ppt: 31\n",
+      "Ppt: 32\n",
+      "Ppt: 33\n",
+      "Ppt: 34\n",
+      "Ppt: 35\n",
+      "Ppt: 36\n",
+      "Ppt: 37\n",
+      "Ppt: 38\n",
+      "Ppt: 39\n",
+      "Ppt: 40\n",
+      "Ppt: 41\n",
+      "Ppt: 42\n",
+      "Ppt: 43\n",
+      "Ppt: 44\n",
+      "Ppt: 45\n",
+      "Ppt: 46\n",
+      "Ppt: 47\n",
+      "Ppt: 48\n",
+      "Ppt: 49\n",
+      "Ppt: 50\n",
+      "Ppt: 51\n",
+      "Ppt: 52\n",
+      "Ppt: 53\n",
+      "Ppt: 54\n",
+      "Ppt: 55\n",
+      "Ppt: 56\n",
+      "Ppt: 57\n",
+      "Ppt: 58\n",
+      "Ppt: 59\n",
+      "Ppt: 60\n",
+      "Ppt: 61\n",
+      "Ppt: 62\n",
+      "Ppt: 63\n",
+      "Ppt: 64\n",
+      "Ppt: 65\n",
+      "Ppt: 66\n",
+      "Ppt: 67\n",
+      "Ppt: 68\n",
+      "Ppt: 69\n",
+      "Ppt: 70\n",
+      "Ppt: 71\n",
+      "Ppt: 72\n",
+      "Ppt: 73\n",
+      "Ppt: 74\n",
+      "Ppt: 75\n",
+      "Ppt: 76\n",
+      "Ppt: 77\n",
+      "Ppt: 78\n",
+      "Ppt: 79\n",
+      "Ppt: 80\n",
+      "Ppt: 81\n",
+      "Ppt: 82\n",
+      "Ppt: 83\n",
+      "Ppt: 84\n",
+      "Ppt: 85\n",
+      "Ppt: 86\n",
+      "Ppt: 87\n",
+      "Ppt: 88\n",
+      "Ppt: 89\n",
+      "Ppt: 90\n",
+      "Ppt: 91\n",
+      "Ppt: 92\n",
+      "Ppt: 93\n",
+      "Ppt: 94\n",
+      "Ppt: 95\n",
+      "Ppt: 96\n",
+      "Ppt: 97\n",
+      "Ppt: 98\n",
+      "Ppt: 99\n",
+      "Ppt: 100\n",
+      "Ppt: 101\n",
+      "Ppt: 102\n",
+      "Ppt: 103\n",
+      "Ppt: 104\n",
+      "Ppt: 105\n",
+      "Ppt: 106\n",
+      "Ppt: 107\n",
+      "Ppt: 108\n",
+      "Ppt: 109\n",
+      "Ppt: 110\n",
+      "Ppt: 111\n",
+      "Ppt: 112\n",
+      "Ppt: 113\n",
+      "Ppt: 114\n",
+      "Ppt: 115\n",
+      "Ppt: 116\n",
+      "Ppt: 117\n",
+      "Ppt: 118\n",
+      "Ppt: 119\n",
+      "Ppt: 120\n",
+      "Ppt: 121\n",
+      "Ppt: 122\n",
+      "Ppt: 123\n",
+      "Ppt: 124\n",
+      "Ppt: 125\n",
+      "Ppt: 126\n",
+      "Ppt: 127\n",
+      "Ppt: 128\n",
+      "Ppt: 129\n",
+      "Ppt: 130\n",
+      "Ppt: 131\n",
+      "Ppt: 132\n",
+      "Ppt: 133\n",
+      "Ppt: 134\n",
+      "Ppt: 135\n",
+      "Ppt: 136\n",
+      "Ppt: 137\n",
+      "Ppt: 138\n",
+      "Ppt: 139\n",
+      "Ppt: 140\n",
+      "Ppt: 141\n",
+      "Ppt: 142\n",
+      "Ppt: 143\n",
+      "Ppt: 144\n",
+      "Ppt: 145\n",
+      "Ppt: 146\n",
+      "Ppt: 147\n",
+      "Ppt: 148\n",
+      "Ppt: 149\n",
+      "Ppt: 150\n",
+      "Ppt: 151\n",
+      "Ppt: 152\n",
+      "Ppt: 153\n",
+      "Ppt: 154\n",
+      "Ppt: 155\n",
+      "Ppt: 156\n",
+      "Ppt: 157\n",
+      "Ppt: 158\n",
+      "Ppt: 159\n",
+      "Ppt: 160\n",
+      "Ppt: 161\n",
+      "Ppt: 162\n",
+      "Ppt: 163\n",
+      "Ppt: 164\n",
+      "Ppt: 165\n",
+      "Ppt: 166\n",
+      "Ppt: 167\n",
+      "Ppt: 168\n",
+      "Ppt: 169\n",
+      "Ppt: 170\n",
+      "Ppt: 171\n",
+      "Ppt: 172\n",
+      "Ppt: 173\n",
+      "Ppt: 174\n",
+      "Ppt: 175\n",
+      "Ppt: 176\n",
+      "Ppt: 177\n",
+      "Ppt: 178\n",
+      "Ppt: 179\n",
+      "Ppt: 180\n",
+      "Ppt: 181\n",
+      "Ppt: 182\n",
+      "Ppt: 183\n",
+      "Ppt: 184\n",
+      "Ppt: 185\n",
+      "Ppt: 186\n",
+      "Ppt: 187\n",
+      "Ppt: 188\n",
+      "Ppt: 189\n",
+      "Ppt: 190\n",
+      "Ppt: 191\n",
+      "Ppt: 192\n",
+      "Ppt: 193\n",
+      "Ppt: 194\n",
+      "Ppt: 195\n",
+      "Ppt: 196\n",
+      "Ppt: 197\n",
+      "Ppt: 198\n",
+      "Ppt: 199\n",
+      "Ppt: 200\n",
+      "Ppt: 201\n",
+      "Ppt: 202\n",
+      "Ppt: 203\n",
+      "Ppt: 204\n",
+      "Ppt: 205\n",
+      "Ppt: 206\n",
+      "Ppt: 207\n",
+      "Ppt: 208\n",
+      "Ppt: 209\n",
+      "Ppt: 210\n",
+      "Ppt: 211\n",
+      "Ppt: 212\n",
+      "Ppt: 213\n",
+      "Ppt: 214\n",
+      "Ppt: 215\n",
+      "Ppt: 216\n",
+      "Ppt: 217\n",
+      "Ppt: 218\n",
+      "Ppt: 219\n",
+      "Ppt: 220\n",
+      "Ppt: 221\n",
+      "Ppt: 222\n",
+      "Ppt: 223\n",
+      "Ppt: 224\n",
+      "Ppt: 225\n",
+      "Ppt: 226\n",
+      "Ppt: 227\n",
+      "Ppt: 228\n",
+      "Ppt: 229\n",
+      "Ppt: 230\n",
+      "Ppt: 231\n",
+      "Ppt: 232\n",
+      "Ppt: 233\n",
+      "Ppt: 234\n",
+      "Ppt: 235\n",
+      "Ppt: 236\n",
+      "Ppt: 237\n",
+      "Ppt: 238\n",
+      "Ppt: 239\n",
+      "Ppt: 240\n",
+      "Ppt: 241\n",
+      "Ppt: 242\n",
+      "Ppt: 243\n",
+      "Ppt: 244\n",
+      "Ppt: 245\n",
+      "Ppt: 246\n",
+      "Ppt: 247\n",
+      "Ppt: 248\n",
+      "Ppt: 249\n",
+      "Ppt: 250\n",
+      "Ppt: 251\n",
+      "Ppt: 252\n",
+      "Ppt: 253\n",
+      "Ppt: 254\n",
+      "Ppt: 255\n",
+      "Ppt: 256\n",
+      "Ppt: 257\n",
+      "Ppt: 258\n",
+      "Ppt: 259\n",
+      "Ppt: 260\n",
+      "Ppt: 261\n",
+      "Ppt: 262\n",
+      "Ppt: 263\n",
+      "Ppt: 264\n",
+      "Ppt: 265\n",
+      "Ppt: 266\n",
+      "Ppt: 267\n",
+      "Ppt: 268\n",
+      "Ppt: 269\n",
+      "Ppt: 270\n",
+      "Ppt: 271\n",
+      "Ppt: 272\n",
+      "Ppt: 273\n",
+      "Ppt: 274\n",
+      "Ppt: 275\n",
+      "Ppt: 276\n",
+      "Ppt: 277\n",
+      "Ppt: 278\n",
+      "Ppt: 279\n",
+      "Ppt: 280\n",
+      "Ppt: 281\n",
+      "Ppt: 282\n",
+      "Ppt: 283\n",
+      "Ppt: 284\n",
+      "Ppt: 285\n",
+      "Ppt: 286\n",
+      "Ppt: 287\n",
+      "Ppt: 288\n",
+      "Ppt: 289\n",
+      "Ppt: 290\n",
+      "Ppt: 291\n",
+      "Ppt: 292\n",
+      "Ppt: 293\n",
+      "Ppt: 294\n",
+      "Ppt: 295\n",
+      "Ppt: 296\n",
+      "Ppt: 297\n",
+      "Ppt: 298\n",
+      "Ppt: 299\n",
+      "Ppt: 300\n",
+      "Ppt: 301\n",
+      "Ppt: 302\n",
+      "Ppt: 303\n",
+      "Ppt: 304\n",
+      "Ppt: 305\n",
+      "Ppt: 306\n",
+      "Ppt: 307\n",
+      "Ppt: 308\n",
+      "Ppt: 309\n",
+      "Ppt: 310\n",
+      "Ppt: 311\n",
+      "Ppt: 312\n",
+      "Ppt: 313\n",
+      "Ppt: 314\n",
+      "Ppt: 315\n",
+      "Ppt: 316\n",
+      "Ppt: 317\n",
+      "Ppt: 318\n",
+      "Ppt: 319\n",
+      "Ppt: 320\n",
+      "Ppt: 321\n",
+      "Ppt: 322\n",
+      "Ppt: 323\n",
+      "Ppt: 324\n",
+      "Ppt: 325\n",
+      "Ppt: 326\n",
+      "Ppt: 327\n",
+      "Ppt: 328\n",
+      "Ppt: 329\n",
+      "Ppt: 330\n",
+      "Ppt: 331\n",
+      "Ppt: 332\n",
+      "Ppt: 333\n",
+      "Ppt: 334\n",
+      "Ppt: 335\n",
+      "Ppt: 336\n",
+      "Ppt: 337\n",
+      "Ppt: 338\n",
+      "Ppt: 339\n",
+      "Ppt: 340\n",
+      "Ppt: 341\n",
+      "Ppt: 342\n",
+      "Ppt: 343\n",
+      "Ppt: 344\n",
+      "Ppt: 345\n",
+      "Ppt: 346\n",
+      "Ppt: 347\n",
+      "Ppt: 348\n",
+      "Ppt: 349\n",
+      "Ppt: 350\n",
+      "Ppt: 351\n",
+      "Ppt: 352\n",
+      "Ppt: 353\n",
+      "Ppt: 354\n",
+      "Ppt: 355\n",
+      "Ppt: 356\n",
+      "Ppt: 357\n",
+      "Ppt: 358\n",
+      "Ppt: 359\n",
+      "Ppt: 360\n",
+      "Ppt: 361\n",
+      "Ppt: 362\n",
+      "Ppt: 363\n",
+      "Ppt: 364\n",
+      "Ppt: 365\n",
+      "Ppt: 366\n",
+      "Ppt: 367\n",
+      "Ppt: 368\n",
+      "Ppt: 369\n",
+      "Ppt: 370\n",
+      "Ppt: 371\n",
+      "Ppt: 372\n",
+      "Ppt: 373\n",
+      "Ppt: 374\n",
+      "Ppt: 375\n",
+      "Ppt: 376\n",
+      "Ppt: 377\n",
+      "Ppt: 378\n",
+      "Ppt: 379\n",
+      "Ppt: 380\n",
+      "Ppt: 381\n",
+      "Ppt: 382\n",
+      "Ppt: 383\n",
+      "Ppt: 384\n",
+      "Ppt: 385\n",
+      "Ppt: 386\n",
+      "Ppt: 387\n",
+      "Ppt: 388\n",
+      "Ppt: 389\n",
+      "Ppt: 390\n",
+      "Ppt: 391\n",
+      "Ppt: 392\n",
+      "Ppt: 393\n"
      ]
     }
    ],
@@ -146,7 +539,8 @@
     "ll_trials = []\n",
     "tally = np.zeros(2)\n",
     "wins = []\n",
-    "for ppt in [318]:#trials.participants:\n",
+    "pptcond_tally = dict()\n",
+    "for ppt in trials.participants:#[318]:\n",
     "    ppt = int(ppt)\n",
     "    print('Ppt: ' + str(ppt))\n",
     "    llrow = []\n",
@@ -155,6 +549,9 @@
     "    else:\n",
     "        extract_trials = 'all'\n",
     "    conditionStr = participants.condition[participants.participant==ppt].values\n",
+    "    if conditionStr not in pptcond_tally.keys():\n",
+    "        pptcond_tally[conditionStr[0]] = 0\n",
+    "    pptcond_tally[conditionStr[0]] += 1\n",
     "    pptconstr = conditionStr[0][0:2]\n",
     "    if \"Corner\" in conditionStr[0]:\n",
     "        pptconstr += conditionStr[0][-1] #Add info on whether square or circle\n",
@@ -280,7 +677,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'Cluster'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conditionStr[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +709,7 @@
        " 'domain_variance_bias': 1.4544815236039712}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,25 +720,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.036 0.023 0.016 0.013 0.013 0.013 0.016 0.023 0.036]\n",
-      " [0.023 0.014 0.01  0.009 0.008 0.009 0.01  0.014 0.023]\n",
-      " [0.016 0.01  0.007 0.006 0.006 0.006 0.007 0.01  0.016]\n",
-      " [0.013 0.009 0.006 0.005 0.005 0.005 0.006 0.009 0.013]\n",
-      " [0.013 0.008 0.006 0.005 0.004 0.005 0.006 0.008 0.013]\n",
-      " [0.013 0.009 0.006 0.005 0.005 0.005 0.006 0.009 0.013]\n",
-      " [0.016 0.01  0.007 0.006 0.006 0.006 0.007 0.01  0.016]\n",
-      " [0.023 0.014 0.01  0.009 0.008 0.009 0.01  0.014 0.023]\n",
-      " [0.036 0.023 0.016 0.013 0.013 0.013 0.016 0.023 0.036]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "sum(participants.condition=='Corner_C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# best_params['Hierarchical Sampling With Representativeness']\n",
     "# temp_params = best_params['Hierarchical Sampling With Representativeness'].copy()\n",
@@ -335,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -379,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -388,15 +809,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.029 0.02  0.016 0.014 0.013 0.014 0.016 0.02  0.029]\n",
-      " [0.02  0.014 0.011 0.01  0.009 0.01  0.011 0.014 0.02 ]\n",
-      " [0.016 0.011 0.009 0.007 0.007 0.007 0.009 0.011 0.016]\n",
-      " [0.014 0.01  0.007 0.006 0.006 0.006 0.007 0.01  0.014]\n",
-      " [0.013 0.009 0.007 0.006 0.006 0.006 0.007 0.009 0.013]\n",
-      " [0.014 0.01  0.007 0.006 0.006 0.006 0.007 0.01  0.014]\n",
-      " [0.016 0.011 0.009 0.007 0.007 0.007 0.009 0.011 0.016]\n",
-      " [0.02  0.014 0.011 0.01  0.009 0.01  0.011 0.014 0.02 ]\n",
-      " [0.029 0.02  0.016 0.014 0.013 0.014 0.016 0.02  0.029]]\n",
       "Outer edges: 0.53\n",
       "Inner spaces: 0.47\n"
      ]
@@ -404,6 +816,7 @@
    ],
    "source": [
     "##Probabilities at outer edge vs inner space - Rep\n",
+    "wrap_ax=None\n",
     "outind = range(9) + [(e+1)*9 for e in range(7)] + [(e+1)*9+8 for e in range(7)] + range(72,80)\n",
     "innind = [i for i in range(81) if not i in outind]\n",
     "model = RepresentJK13\n",
@@ -412,7 +825,7 @@
     "temp1 = model(categories1,params,trialppt.stimrange).get_generation_ps(trialppt.stimuli,1,'generate',wrap_ax=wrap_ax)\n",
     "outps = sum(temp1[outind])\n",
     "innps = sum(temp1[innind])\n",
-    "print(np.round(np.reshape(temp1,(9,9)),3))\n",
+    "# print(np.round(np.reshape(temp1,(9,9)),3))\n",
     "\n",
     "print('Outer edges: ' + str(np.round(outps,2)))\n",
     "print('Inner spaces: ' + str(np.round(innps,2)))"
@@ -420,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -429,15 +842,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.009 0.01  0.011 0.011 0.012 0.011 0.011 0.01  0.009]\n",
-      " [0.01  0.011 0.012 0.013 0.013 0.013 0.012 0.011 0.01 ]\n",
-      " [0.011 0.012 0.013 0.014 0.014 0.014 0.013 0.012 0.011]\n",
-      " [0.011 0.013 0.014 0.015 0.015 0.015 0.014 0.013 0.011]\n",
-      " [0.012 0.013 0.014 0.015 0.015 0.015 0.014 0.013 0.012]\n",
-      " [0.011 0.013 0.014 0.015 0.015 0.015 0.014 0.013 0.011]\n",
-      " [0.011 0.012 0.013 0.014 0.014 0.014 0.013 0.012 0.011]\n",
-      " [0.01  0.011 0.012 0.013 0.013 0.013 0.012 0.011 0.01 ]\n",
-      " [0.009 0.01  0.011 0.011 0.012 0.011 0.011 0.01  0.009]]\n",
       "Outer edges: 0.33\n",
       "Inner spaces: 0.67\n"
      ]
@@ -453,7 +857,7 @@
     "temp1 = model(categories1,params,trialppt.stimrange).get_generation_ps(trialppt.stimuli,1,'generate',wrap_ax=wrap_ax)\n",
     "outps = sum(temp1[outind])\n",
     "innps = sum(temp1[innind])\n",
-    "print(np.round(np.reshape(temp1,(9,9)),3))\n",
+    "# print(np.round(np.reshape(temp1,(9,9)),3))\n",
     "\n",
     "print('Outer edges: ' + str(np.round(outps,2)))\n",
     "print('Inner spaces: ' + str(np.round(innps,2)))"
@@ -461,16 +865,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wrap_ax"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 18, 72, 8, 0, 27, 76, 3, 72, 0, 53, 71, 3, 63, 8, 0]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ppt_S = gencond.loc[gencond.trial==0].loc[gencond.condition=='Corner_S'].stimulus.values\n",
     "ppt_C = gencond.loc[gencond.trial==0].loc[gencond.condition=='Corner_C'].stimulus.values\n",
@@ -480,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +917,7 @@
     "outind = range(9) + [(e+1)*9 for e in range(7)] + [(e+1)*9+8 for e in range(7)] + range(72,80)\n",
     "innind = [i for i in range(81) if not i in outind]\n",
     "#Get people\n",
-    "# ppt_S = gencond.loc[gencond.trial==0].loc[gencond.condition=='Corner_S'].stimulus.values\n",
+    "ppt_S = gencond.loc[gencond.trial==0].loc[gencond.condition=='Corner_S'].stimulus.values\n",
     "ppt_C = gencond.loc[gencond.trial==0].loc[gencond.condition=='Corner_C'].stimulus.values\n",
     "outppt = [i for i in ppt_C if i in outind]# + [i for i in ppt_C if i in outind]\n",
     "innppt = [i for i in ppt_C if i in innind]# + [i for i in ppt_C if i in innind]\n",
@@ -560,9 +977,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Packer wins, mean lls across trials:\n",
+      "[161 157 179 182]\n",
+      "\n",
+      "Representativeness wins, mean lls across trials:\n",
+      "[233 237 215 212]\n"
+     ]
+    }
+   ],
    "source": [
     "#Calculate cumulative lls at each trial, excluding last trial (since it's a dummy)\n",
     "ll_trials_cs = [np.cumsum(ppt_trial[:4,:],axis=0) for ppt_trial in ll_trials]\n",
@@ -580,9 +1009,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tally of bests:\n",
+      "PACKER: 182.00\n",
+      "Representative: 212.00\n"
+     ]
+    }
+   ],
    "source": [
     "#Print a summary\n",
     "print('Tally of bests:')\n",
