--- a/Manuscripts/cog-psych/post-revision/citations.bib
+++ b/Manuscripts/cog-psych/post-revision/citations.bib
@@ -1,3 +1,11 @@
+@book{mardia1972,
+	author = {K. V. Mardia and P. E. Jupp},
+	title = {Statistics of Directional Data},
+	publisher = {Academic Press Inc.},
+	address = {London},
+	year = {1972}
+}
+
 @article{ahn1992two,
   title={A two-stage model of category construction},
   author={Ahn, Woo-Kyoung and Medin, Douglas L},
